--- a/panda_jitsu/pubspec.yaml
+++ b/panda_jitsu/pubspec.yaml
@@ -35,6 +35,8 @@ flutter:
    - assets/images/background/dojo-no-tray.png
    - assets/images/background/frame.png
    - assets/images/background/frame-with-tray.png
+   - assets/images/background/tray.png
+   - assets/images/background/help.png
    - assets/images/belts/white-belt.png
    - assets/images/belts/yellow-belt.png
    - assets/images/belts/orange-belt.png
