--- a/panda_jitsu/pubspec.yaml
+++ b/panda_jitsu/pubspec.yaml
@@ -31,9 +31,7 @@ flutter_icons:
 flutter:
   uses-material-design: true # access to material 'Icons'
   assets:
-   - assets/images/background/dojo-no-tray.png
    - assets/images/background/dojo.png
-   - assets/images/background/frame-with-tray.png
    - assets/images/background/frame.png
    - assets/images/background/help.png
    - assets/images/background/tray.png
@@ -53,16 +51,16 @@ flutter:
    - assets/images/modals/legend.png
    - assets/images/cards/back-side.png
    - assets/images/cards/blue-card.png
-   - assets/images/cards/fire-card.png
+   - assets/images/cards/fire-card.png # Note: Consider removing (depreciated)
    - assets/images/cards/fire.png
    - assets/images/cards/green-card.png
    - assets/images/cards/orange-card.png
    - assets/images/cards/purple-card.png
    - assets/images/cards/red-card.png
    - assets/images/cards/sensei-back.png
-   - assets/images/cards/snow-card.png
+   - assets/images/cards/snow-card.png # Note: Consider removing (depreciated)
    - assets/images/cards/snow.png
-   - assets/images/cards/water-card.png
+   - assets/images/cards/water-card.png # Note: Consider removing (depreciated)
    - assets/images/cards/water.png
    - assets/images/cards/yellow-card.png
 
